--- a/02-basics/composer.json
+++ b/02-basics/composer.json
@@ -16,6 +16,7 @@
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.36",
+        "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
