--- a/02-basics/config/services.yaml
+++ b/02-basics/config/services.yaml
@@ -5,15 +5,12 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     'download_directory': '../public/'
-    admin_email: admin@admin.com
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        bind:
-            $globalParam: 'global param to be used by all services defined in this file'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -34,6 +31,4 @@ services:
 
     App\Services\MyService:
         arguments:
-            $param: "some parameter"
-            $param2: "param 2"
-            $adminEmail: '%admin_email%'
+            $second_service: '@App\Services\MySecondService'
