--- a/02-basics/config/services.yaml
+++ b/02-basics/config/services.yaml
@@ -11,6 +11,7 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        public: false
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -25,10 +26,5 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Controller\DefaultController:
-        arguments:
-            $logger: '@monolog.logger.doctrine'
-
     App\Services\MyService:
-        arguments:
-            $second_service: '@App\Services\MySecondService'
+        autowire: true
