--- a/02-basics/composer.json
+++ b/02-basics/composer.json
@@ -20,6 +20,7 @@
         "symfony/framework-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.36",
         "symfony/mime": "5.4.*",
+        "symfony/monolog-bundle": "^3.7",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
