--- a/02-basics/config/services.yaml
+++ b/02-basics/config/services.yaml
@@ -26,9 +26,10 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Services\MyService:
+    app.myservice:
+        class: App\Services\MyService
         arguments:
-            $service: '@App\Services\MySecondService'
-    
-    App\Services\MySecondService:
-        lazy: true
+            $one: 'something'
+        public: true
+
+    App\Services\MyService: '@app.myservice'
