--- a/02-basics/composer.json
+++ b/02-basics/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.10",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
+        "symfony/cache": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
         "symfony/dotenv": "5.4.*",
