--- a/02-basics/config/services.yaml
+++ b/02-basics/config/services.yaml
@@ -27,3 +27,7 @@ services:
     # please note that last definitions always *replace* previous ones
 
     App\Services\ServiceInterface: '@App\Services\MyService'
+
+    App\Services\KernelResponseListener: 
+        tags:
+            - {name: kernel.event_listener, event: kernel.response}
