--- a/02-basics/config/services.yaml
+++ b/02-basics/config/services.yaml
@@ -28,6 +28,6 @@ services:
 
     App\Services\ServiceInterface: '@App\Services\MyService'
 
-    App\Services\KernelResponseListener: 
+    App\Listeners\VideoCreatedListener: 
         tags:
-            - {name: kernel.event_listener, event: kernel.response}
+            - {name: kernel.event_listener, event: video.created.event}
