--- a/02-basics/config/services.yaml
+++ b/02-basics/config/services.yaml
@@ -26,8 +26,8 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Services\ServiceInterface: '@App\Services\MyService'
+    # App\Services\ServiceInterface: '@App\Services\MyService'
 
-    App\Listeners\VideoCreatedListener: 
-        tags:
-            - {name: kernel.event_listener, event: video.created.event}
+    # App\Listeners\VideoCreatedListener: 
+    #     tags:
+    #         - {name: kernel.event_listener, event: video.created.event}
