--- a/02-basics/composer.json
+++ b/02-basics/composer.json
@@ -26,6 +26,7 @@
         "symfony/monolog-bundle": "^3.7",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
+        "symfony/swiftmailer-bundle": "^3.5",
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*",
