--- a/02-basics/composer.json
+++ b/02-basics/composer.json
@@ -21,12 +21,12 @@
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
-        "symfony/mailer": "5.4.*",
         "symfony/maker-bundle": "^1.36",
         "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
         "symfony/web-profiler-bundle": "5.4.*",
