--- a/02-basics/config/packages/security.yaml
+++ b/02-basics/config/packages/security.yaml
@@ -27,6 +27,14 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+            form_login:
+                login_path: login
+                check_path: login
+
+                username_parameter: 'email'
+                password_parameter: 'password'
+                enable_csrf: true
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
