--- a/02-basics/config/packages/security.yaml
+++ b/02-basics/config/packages/security.yaml
@@ -34,6 +34,10 @@ security:
                 username_parameter: 'email'
                 password_parameter: 'password'
                 enable_csrf: true
+            
+            logout:
+                path: /logout
+                target: /home
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
