--- a/02-basics/config/packages/security.yaml
+++ b/02-basics/config/packages/security.yaml
@@ -39,6 +39,11 @@ security:
                 path: /logout
                 target: /home
 
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800
+                path: /
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
