--- a/02-basics/composer.json
+++ b/02-basics/composer.json
@@ -12,20 +12,19 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
-        "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/cache": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/debug-bundle": "5.4.*",
         "symfony/dotenv": "5.4.*",
-        "symfony/expression-language": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.36",
         "symfony/mime": "5.4.*",
         "symfony/monolog-bundle": "^3.7",
+        "symfony/phpunit-bridge": "^6.0",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.4.*",
@@ -80,6 +79,7 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.4"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.5"
     }
 }
