--- a/05-video-sub-project/.gitignore
+++ b/05-video-sub-project/.gitignore
@@ -9,3 +9,11 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+public_copy
