--- a/05-video-sub-project/composer.json
+++ b/05-video-sub-project/composer.json
@@ -16,6 +16,7 @@
         "symfony/maker-bundle": "^1.36",
         "symfony/runtime": "6.0.*",
         "symfony/twig-bundle": "5.*",
+        "symfony/webpack-encore-bundle": "^1.13",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
