--- a/05-video-sub-project/composer.json
+++ b/05-video-sub-project/composer.json
@@ -12,9 +12,11 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.10",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
+        "symfony/expression-language": "5.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.36",
