--- a/05-video-sub-project/composer.json
+++ b/05-video-sub-project/composer.json
@@ -18,11 +18,13 @@
         "symfony/dotenv": "6.0.*",
         "symfony/expression-language": "5.*",
         "symfony/flex": "^2",
+        "symfony/form": "5.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.36",
         "symfony/proxy-manager-bridge": "5.*",
         "symfony/runtime": "6.0.*",
         "symfony/twig-bundle": "5.*",
+        "symfony/validator": "5.*",
         "symfony/webpack-encore-bundle": "^1.13",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
