--- a/05-video-sub-project/.gitignore
+++ b/05-video-sub-project/.gitignore
@@ -1,6 +1,5 @@
 
 ###> symfony/framework-bundle ###
-.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -17,3 +16,12 @@ npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 public_copy
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
