--- a/05-video-sub-project/composer.json
+++ b/05-video-sub-project/composer.json
@@ -83,7 +83,11 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.*",
+        "symfony/css-selector": "5.*",
         "symfony/debug-bundle": "5.*",
+        "symfony/phpunit-bridge": "^6.0",
         "symfony/stopwatch": "5.*",
         "symfony/var-dumper": "5.*",
         "symfony/web-profiler-bundle": "5.*"
